# newegg

./: .gitignore
newegg/: Cargo.toml
newegg/src/: client.rs  helpers.rs  lib.rs  result.rs  service_status.rs  types.rs
newegg/src/feed/: message.rs  mod.rs  types.rs
newegg/src/order/: mod.rs  types.rs
newegg/src/report/: mod.rs  types.rs
newegg_cli/: Cargo.toml
newegg_cli/src/: helpers.rs  main.rs  report.rs
