[package]
name = "newegg"
version = "0.2.0"
authors = ["fluxxu <fluxxu@gmail.com>"]
description = "Newegg Marketplace API client."
license = "MIT"
repository = "https://github.com/Ventmere/newegg"

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
chrono-tz = "0.4"
reqwest = "0.8.2"
failure = "0.1.2"
failure_derive = "0.1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"