[package]
name = "newegg"
version = "0.3.0"
authors = ["fluxxu <fluxxu@gmail.com>"]
description = "Newegg Marketplace API client."
license = "MIT"
repository = "https://github.com/Ventmere/newegg"
edition = "2018"

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
chrono-tz = "0.4"
reqwest = "0.9.19"
failure = "0.1.2"
failure_derive = "0.1.2"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ftp = "3.0.1"
csv = "1.1.1"
futures01 = { version = "0.1", package = "futures" }
futures-preview = { version = "=0.3.0-alpha.18", features = ["compat"] }