[package]
name = "newegg"
version = "0.4.0"
authors = ["fluxxu <fluxxu@gmail.com>"]
description = "Newegg Marketplace API client."
license = "MIT"
repository = "https://github.com/Ventmere/newegg"
edition = "2018"

[dependencies]
chrono = { version = "0.4.0", features = ["serde"] }
chrono-tz = "0.4"
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ftp = "3.0.1"
futures = "0.3"
url = "2.1.0"
lazy_static = "1.0"
async-trait = "0.1.51"
tokio = { version = "1", features = ["rt"] }