[package]
name = "newegg_cli"
version = "0.1.0"
authors = ["fluxxu <fluxxu@gmail.com>"]
edition = "2018"

[dependencies]
clap = "2.31.2"
dotenv = "0.10.1"
newegg = "*"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4.0", features = ["serde"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
bigdecimal = { version = "=0.0.14", features = ["serde"] }
csv = "1.1.1"